@@ -1,6 +1,8 @@
 Changes to Version 2.0-11
 
-	o  Nothing yet!
+	o  ellipse(), confidenceEllipse(), and dataEllipse() return coordinates invisibly (suggested by Michael Friendly, with contributed code).
+	
+	o  fixed bug in printed representation of hypotheses with numbers starting with "-1" or "+1" (e.g., "-10") by linearHypothesis() (reported by Vincent Arel-Bundock).
 
 Changes to Version 2.0-10
 
